--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,10 @@
         <div class="container-horizontal">
             <a class="header-logo" href="#">Connectum</a>
             <nav class="header-nav">
-                <div class="header-nav-btn">
-                    <img src="/src/img/search.svg" alt="">
-                </div>
+                <form action="/search" class="header-nav-search" method="POST" >
+                    <button class="header-nav-btn"><img src="/src/img/search.svg" alt=""></button>
+                    <input type="text">
+                </form>
                 <div class="header-nav-btn">
                     <img src="/src/img/bell.svg" alt="">
                 </div>
