--- a/views/partials/_side-navs.ejs
+++ b/views/partials/_side-navs.ejs
@@ -1,6 +1,6 @@
 <div class="container-horizontal relative h0">
     <nav class="nav-menu">
-        <a href="#" class="nav-menu-link">
+        <a href="/profile" class="nav-menu-link">
             <img src="/src/img/profile.svg" alt="">
             <div class="hover-effect">Me</div>
         </a>
