--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,7 @@
 @import './header.css';
 @import './login-form.css';
 @import './friends.css';
+@import './profile.css';
 
 :root {
     font-family: 'Raleway', sans-serif;
@@ -16,7 +17,11 @@
 
 body {
     background-color: #eeeeee;
-    height: 3000px;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
 }
 
 .container-horizontal {
@@ -148,4 +153,13 @@ body {
     background-color: #fff;
     border-radius: .35em;
     padding: 1em 1.3em;
+}
+
+.col-2 {
+    grid-column: 1 / 3;
+}
+
+input:focus, textarea:focus {
+    border: 1px solid black;
+    outline: none;
 }
