--- a/views/friends/find-friends.ejs
+++ b/views/friends/find-friends.ejs
@@ -12,7 +12,11 @@
     <%- include ('../partials/_side-navs.ejs') %> 
     <div class="container-content">
         <% if (users.length > 0) { %>
-            <h2 class="page-header">Results for "<%= searchField %> "</h2>
+            <% if (searchField == '') { %>
+                <h2 class="page-header">All people</h2>
+            <% } else { %>
+                <h2 class="page-header">Results for "<%= searchField %>"</h2>
+            <% } %>
             <div class="friends-container">
                 <% users.forEach(user => { %>
                     <div class="friend-container">
