--- a/views/partials/_side-navs.ejs
+++ b/views/partials/_side-navs.ejs
@@ -8,7 +8,7 @@
             <img src="/src/img/chat.svg" alt="">
             <div class="hover-effect">Messages</div>
         </a>
-        <a href="#" class="nav-menu-link">
+        <a href="/friends" class="nav-menu-link">
             <img src="/src/img/friends.svg" alt="">
             <div class="hover-effect">Friends</div>
         </a>
