--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,165 +1,183 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-@import './header.css';
-@import './login-form.css';
-@import './friends.css';
-@import './profile.css';
+@import "./header.css";
+@import "./login-form.css";
+@import "./friends.css";
+@import "./profile.css";
 
 :root {
-    font-family: 'Raleway', sans-serif;
+	font-family: "Raleway", sans-serif;
 }
 
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    background-color: #eeeeee;
+	background-color: #eeeeee;
 }
 
 a {
-    text-decoration: none;
-    color: #333;
+	text-decoration: none;
+	color: #333;
 }
 
 .container-horizontal {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100%;
-    width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 100%;
+	width: 100%;
 }
 
 .relative {
-    position: relative;
+	position: relative;
 }
 
 .right {
-    justify-content: end;
+	justify-content: end;
 }
 
 .h0 {
-    height: 0;
+	height: 0;
 }
 
 .hover-effect {
-    position: relative;
+	position: relative;
 }
 
 .hover-effect::before {
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color: #333;
-    position: absolute;
-    top: 100%;
-    transform: scale(0);
-    transform-origin: left;
-    transition: .2s ease-out;
+	content: "";
+	width: 100%;
+	height: 2px;
+	background-color: #333;
+	position: absolute;
+	top: 100%;
+	transform: scale(0);
+	transform-origin: left;
+	transition: 0.2s ease-out;
 }
 
 .hover-effect:hover::before {
-    transform: scale(1);
+	transform: scale(1);
 }
 
 .container-content {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    max-width: 55%;
-    margin: 0 auto;
-    margin-top: 12vh;
-    transform: translateX(-10px);
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	max-width: 55%;
+	margin: 0 auto;
+	margin-top: 12vh;
+	transform: translateX(-10px);
 }
 
 .post {
-    padding: 1.5em;
-    background-color: white;
-    border-radius: .3em;
-    margin-bottom: 1.5em;
+	padding: 1.5em;
+	background-color: white;
+	border-radius: 0.3em;
+	margin-bottom: 1.5em;
 }
 
 .post-header {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .post-header-profile {
-    width: 2.5em;
-    height: 2.5em;
+	width: 2.5em;
+	height: 2.5em;
 }
 
 .post-header-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: .5em;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-left: 0.5em;
 }
 
 .post-header-info-date {
-    font-size: .7em;
-    color: #5a5a5a;
-    font-weight: 600;
+	font-size: 0.7em;
+	color: #5a5a5a;
+	font-weight: 600;
 }
 
 .online::before {
-    content: '';
-    width: 10px;
-    height: 10px;
-    background-color: blue;
-    border-radius: 50%;
-    position: absolute;
-    bottom: 10%;
-    right: 0;
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: blue;
+	border-radius: 50%;
+	position: absolute;
+	bottom: 10%;
+	right: 0;
 }
 
 .post-image {
-    width: 100%;
-    margin-top: 1em;
+	width: 100%;
+	margin-top: 1em;
 }
 
 .post-statistics {
-    display: flex;
-    align-items: center;
-    margin-top: .6em;
+	display: flex;
+	align-items: center;
+	margin-top: 0.6em;
 }
 
 .post-statistics form {
-    display: flex;
-    align-items: center;
-    font-size: 22px;
-    margin-right: 1em;
+	display: flex;
+	align-items: center;
+	font-size: 22px;
+	margin-right: 1em;
 }
 
 .post-statistics button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    height: 2.5em;
-    margin-right: .2em;
+	border: none;
+	background: none;
+	cursor: pointer;
+	height: 2.5em;
+	margin-right: 0.2em;
 }
 
 .post-statistics img {
-    height: 100%;
+	height: 100%;
 }
 
 .page-header {
-    width: 100%;
-    font-weight: 600;
-    background-color: #fff;
-    border-radius: .35em;
-    padding: 1em 1.3em;
+	width: 100%;
+	font-weight: 600;
+	background-color: #fff;
+	border-radius: 0.35em;
+	padding: 1em 1.3em;
 }
 
 .col-2 {
-    grid-column: 1 / 3;
+	grid-column: 1 / 3;
 }
 
-input:focus, textarea:focus {
-    border: 1px solid black;
-    outline: none;
+input:focus,
+textarea:focus {
+	border: 1px solid black;
+	outline: none;
+}
+
+.hidden {
+	display: none;
+}
+
+.send-friend-request {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+}
+
+.send-friend-request button {
+	width: 100%;
 }
