--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feed</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <script defer src="/scripts/script.js"></script>
+    <script
+		src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+		crossorigin="anonymous"></script>
+    <script type=”text/javascript” src=”/socket.io/socket.io.js”></script>
+    <script defer src="/scripts/sendRequest.js"></script>
 </head>
 <body>
     <%- include ('partials/_header.ejs') %> 
