--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,9 +9,18 @@
             <div class="header-nav-btn" data-hidden-container>
                 <img src="/src/img/bell.svg" alt="">
                 <div class="header-nav-btn-container" data-child-hidden-container>
-                    <form action="/logout?_method=DELETE" method="POST">
-                        <button type="submit" class="hover-effect">Logout</button>
-                    </form>
+                    <div class="friend-request">
+                        <% if (user.friendRequest.length > 0) { %>
+                            <% user.friendRequest.forEach(request => { %>
+                                <div class="friend-request" style="border: 1px solid #333;">
+                                    <input type="hidden" name="receiverId" value="<%= user.id %>" data-friend-receiver>
+                                    <input type="hidden" name="senderId" value="<%= request.userId %>" data-friend-sender>
+                                    <button class="btn-add-friend hover-effect" data-accept-request>Accept</button>
+                                    <button class="btn-add-friend hover-effect" data-reject-request>Reject</button>
+                                </div>
+                            <% }) %>
+                        <% } %>
+                    </div>
                 </div>
             </div>
             <div class="header-nav-btn" data-hidden-container>
