--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -16,7 +16,7 @@
             <h6 class="col-2">Your profile image</h6>
             <div class="profile-left">
                 <div class=".friend-container-img ">
-                    <img src="/img/profile-img/1605693205405-tom.jpg" alt="">
+                    <img src="<%= user.profileImage %>" alt="">
                 </div>
             </div>
             <div class="profile-right">
