--- a/views/partials/_side-navs.ejs
+++ b/views/partials/_side-navs.ejs
@@ -4,7 +4,7 @@
             <img src="/src/img/profile.svg" alt="">
             <div class="hover-effect">Me</div>
         </a>
-        <a href="#" class="nav-menu-link">
+        <a href="/messages" class="nav-menu-link">
             <img src="/src/img/chat.svg" alt="">
             <div class="hover-effect">Messages</div>
         </a>
