--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feed</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <script
         type="text/javascript"
