--- a/views/partials/_side-navs.ejs
+++ b/views/partials/_side-navs.ejs
@@ -21,13 +21,7 @@
             <div class="hover-effect">Images</div>
         </a>
     </nav>
-    <section class="friends-online">
+    <section class="friends-online" data-friends-online>
         <h3>Friends online</h3>
-        <div class="friend-online">
-            <div class="friend-img online"><img src="/src/img/profile.svg" alt=""></div>Friend
-        </div>
-        <div class="friend-online">
-            <div class="friend-img online"><img src="/src/img/profile.svg" alt=""></div>Friend
-        </div>
     </section>
 </div>
